@@ -1,3 +1,8 @@
+2005-10-04  mallum,,,  <mallum@openedhand.com>
+
+	* Makefile.am:
+	Disable installing of fullscreen desktop file.
+
 2005-05-25  mallum,,,  <mallum@openedhand.com>
 
 	* data/strokes.xml:
